--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,21 @@
-* {
-  box-sizing: border-box;
+/* common */
+
+body {
+  font-family: "Inter", sans-serif;
+  margin: 0;
 }
+
+.container {
+  width: 1280px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Reset styles */
 
 h1,
 h2,
@@ -13,7 +28,8 @@ p {
   padding: 0;
 }
 
-ul {
+ul,
+ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -22,6 +38,8 @@ ul {
 a {
   text-decoration: none;
   font-style: normal;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -30,17 +48,11 @@ img {
   height: auto;
 }
 
-body {
-  font-family: "Inter", sans-serif;
-}
-
-.container {
-  width: 1280px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
-
 /* --------------header---------------------------- */
+
+main {
+  position: relative;
+}
 
 .header {
   position: absolute;
@@ -79,9 +91,6 @@ body {
   gap: 40px;
 }
 
-.header-item {
-}
-
 .header-link {
   font-weight: 400;
   font-size: 12px;
@@ -95,10 +104,14 @@ body {
 
 .hero {
   padding-top: 243px;
-  padding-left: 16px;
-  background-color: #06071b;
-  color: #ffffff;
   padding-bottom: 146px;
+
+  background-image: url(../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+
+  color: #ffffff;
 }
 
 .hero-container {
@@ -158,7 +171,8 @@ body {
   color: #ffffff;
 }
 
-.hero-btn:hover {
+.hero-btn:hover,
+.hero-btn:focus {
   background: #06071b;
   border: 2px solid;
   border-radius: 6px;
@@ -175,11 +189,12 @@ body {
 /* --------------FEATURES---------------------------- */
 
 .features {
-  background: linear-gradient(
-    99deg,
-    rgba(0, 197, 235, 0.1) 0%,
-    rgba(181, 68, 254, 0.1) 100%
-  );
+  background-image: url(../images/Vector_4.png), url(../images/Vector_3.png);
+
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, cover;
+  background-position: top right, bottom left;
+
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -199,7 +214,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  margin-bottom: 56px;
+  max-width: 855px;
+  margin: 0 auto 56px auto;
 }
 
 .features-box {
@@ -272,18 +288,16 @@ body {
 
 .watch-video {
   padding-top: 60px;
-  padding-bottom: 98px;
+  padding-bottom: 60px;
 
-  background-color: #06071b;
+  background-image: url(../images/video-1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .watch-video-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-
-  padding-left: 16px;
-  padding-right: 121px;
 }
 
 .watch-video-box {
@@ -309,7 +323,6 @@ body {
 .watch-video-list {
   display: flex;
   gap: 20px;
-  justify-content: flex-start;
 }
 
 .watch-video-item {
@@ -337,18 +350,19 @@ body {
   margin-left: auto;
 }
 
-.watch-video-link:hover .watch-video-icon {
-  stroke: #b544fe;
-  stroke-width: 1px;
+.watch-video-link:hover .watch-video-icon,
+.watch-video-link:focus .watch-video-icon {
+  stroke: #00c5eb;
+  stroke-width: 2px;
   fill: none;
 }
 
-.watch-video-link:hover {
-  background: #06071b;
-  border: 2px solid;
+.watch-video-link:hover,
+.watch-video-link:focus {
+  background: linear-gradient(#06071b 0 0) content-box,
+    linear-gradient(99deg, #00c5eb 0%, #b544fe 100%) border-box;
+  border: 2px solid transparent;
   border-radius: 50%;
-  border-image-source: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
-  border-image-slice: 1;
 }
 
 /* --------------OUR TEAM---------------------------- */
@@ -358,7 +372,7 @@ body {
 
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
-  background-position: top right, center center;
+  background-position: top right, center;
 
   padding-top: 80px;
   padding-bottom: 0;
@@ -388,7 +402,6 @@ body {
 .our-team-list {
   display: flex;
   align-items: center;
-
   gap: 32px;
 }
 
@@ -399,35 +412,43 @@ body {
 }
 
 .david {
-  background-color: #06071b;
-  background: linear-gradient(
-    318deg,
-    rgba(0, 197, 235, 0.5) 0%,
-    rgba(181, 68, 254, 0.5) 100%
-  );
   backdrop-filter: blur(35px);
+  background: #06071b
+    linear-gradient(
+      318deg,
+      rgba(0, 197, 235, 0.5) 0%,
+      rgba(181, 68, 254, 0.5) 100%
+    );
 }
 
 .rachel {
-  background-color: #06071b;
-  background: linear-gradient(115deg, #00c5eb 0%, #b544fe 100%);
   backdrop-filter: blur(35px);
+  background: #06071b
+    linear-gradient(
+      115deg,
+      rgba(0, 197, 235, 0.5) 0%,
+      rgba(181, 68, 254, 0.5) 100%
+    );
 }
 
 .chen {
-  background-color: #06071b;
-  background: linear-gradient(
-    197deg,
-    rgba(0, 197, 235, 0.5) 0%,
-    rgba(181, 68, 254, 0.5) 100%
-  );
   backdrop-filter: blur(35px);
+  background: #06071b
+    linear-gradient(
+      197deg,
+      rgba(0, 197, 235, 0.5) 0%,
+      rgba(181, 68, 254, 0.5) 100%
+    );
 }
 
 .andrew {
-  background-color: #06071b;
-  background: linear-gradient(319deg, #00c5eb 0%, #b544fe 100%);
   backdrop-filter: blur(35px);
+  background: #06071b
+    linear-gradient(
+      319deg,
+      rgba(0, 197, 235, 0.5) 0%,
+      rgba(181, 68, 254, 0.5) 100%
+    );
 }
 
 .our-team-image {
@@ -460,15 +481,14 @@ body {
 /* --------------COSTUMERS---------------------------- */
 
 .coctumers {
-  background-image: url(../images/Vector-7.png), url(../images/Vector-6.png),
-    url(../images/Vector-5.png);
+  background-image: url(../images/cost-1.jpg);
 
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: cover, cover, cover;
-  background-position: top right, left bottom, center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   padding-top: 116px;
-  padding-bottom: 172px;
+  padding-bottom: 80px;
 }
 
 .coctumers-container {
@@ -522,7 +542,13 @@ body {
 
 .footer-page {
   padding-top: 80px;
-  background-color: #06071b;
+  padding-bottom: 21px;
+
+  background-image: url(../images/foot.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   color: #ffffff;
 }
 
@@ -533,10 +559,11 @@ body {
   margin-bottom: 80px;
 }
 
-.footer-subtitle {
-  font-weight: 500;
-  font-size: 24px;
-  text-align: left;
+.footer-contact-box {
+  display: flex;
+  justify-content: space-between;
+
+  padding-left: 16px;
 }
 
 .footer-info {
@@ -545,76 +572,91 @@ body {
   gap: 20px;
 }
 
+.footer-subtitle {
+  font-weight: 500;
+  font-size: 24px;
+
+  max-width: 229px;
+}
+
 .footer-text {
   font-weight: 500;
   font-size: 16px;
-  text-align: left;
+
   max-width: 500px;
 }
 
-.footer-down {
-  border-top: 1px solid #fff;
-  padding-top: 22px;
-  padding-left: 16px;
-  padding-bottom: 21px;
-}
 .footer-link-list {
   display: flex;
   gap: 14px;
 }
 
-.address-item {
-  display: block;
-  padding-bottom: 12px;
-  color: #ffffff;
-}
-
-.btn-footer {
-  border: none;
-  border-radius: 5px;
+.footer-link-item {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   background: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
-  padding: 12px 59px 12px 59px;
-  margin-bottom: 79px;
-  font-weight: 700;
-  font-size: 16px;
-  margin-left: auto;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  color: #ffffff;
-  height: 42px;
 }
 
-.btn-footer:hover {
-  background: #06071b;
-  border: 2px solid;
-  border-radius: 6px;
-  border-image-source: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
-  border-image-slice: 1;
+.footer-icon {
+  fill: #ffffff;
 }
 
-.footer-contact-box {
+.footer-link-item:hover .footer-icon,
+.footer-link-item:focus .footer-icon {
+  stroke: #00c5eb;
+  stroke-width: 2px;
+  fill: none;
+}
+
+.footer-link-item:hover,
+.footer-link-item:focus {
+  background: linear-gradient(#06071b 0 0) content-box,
+    linear-gradient(99deg, #00c5eb 0%, #b544fe 100%) border-box;
+  border: 2px solid transparent;
+  border-radius: 50%;
+}
+
+.address-footer-list {
   display: flex;
-  gap: 140px;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  flex-direction: column;
+  gap: 12px;
 }
 
-.footer-form-text {
-  margin-bottom: 20px;
-  resize: none;
+.address-item {
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.phone {
+  font-size: 16px;
+}
+
+.mailto {
+  font-size: 14px;
+}
+
+.footer-form {
+  max-width: 608px;
+  margin-left: auto;
 }
 
 .footer-list-input {
-  width: 100%;
   display: flex;
   gap: 32px;
   margin-bottom: 20px;
 }
 
+.footer-list {
+}
+
 .footer-input {
   border: 0;
+  width: 288px;
   height: 40px;
   border-radius: 5px;
   background-color: #fff;
@@ -623,10 +665,12 @@ body {
   padding: 11px 8px;
   color: #000;
 }
+
 .footer-form-text {
-  width: 100%;
+  resize: none;
+  width: 608px;
   height: 162px;
-  border: 0;
+  border: none;
   border-radius: 5px;
   background-color: #fff;
   padding: 12px 8px;
@@ -640,32 +684,49 @@ body {
   color: #939eac;
 }
 
-.footer-icon {
-  fill: #ffffff;
-}
+.btn-footer {
+  border: none;
+  cursor: pointer;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 79px;
+  margin-left: auto;
 
-.footer-link-item {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  border-radius: 5px;
   background: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 12px 59px;
+
+  font-weight: 700;
+  font-size: 16px;
+  color: #ffffff;
+  width: 181px;
+  height: 42px;
 }
 
-.footer-link-item:hover .footer-icon {
-  stroke: #00c5eb;
-  stroke-width: 2px;
-  fill: none;
-}
-
-.footer-link-item:hover {
+.btn-footer:hover,
+.btn-footer:focus {
   background: #06071b;
   border: 2px solid;
-  border-radius: 50%;
+  border-radius: 6px;
   border-image-source: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
   border-image-slice: 1;
+}
+
+.footer-down {
+  border: 1px solid #fff;
+  width: 1280px;
+  height: 0px;
+  transform: rotate(-180deg);
+}
+
+.footer-down-text {
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+  text-align: left;
+  max-width: 500px;
+  margin-top: 22px;
+  padding-left: 16px;
 }
 
 /* ----------------------------modal---------------------------- */
@@ -736,7 +797,8 @@ body {
   fill: #ffffff;
 }
 
-.modal-close-btn:hover .modal-icon-close {
+.modal-close-btn:hover .modal-icon-close,
+.modal-close-btn:focus .modal-icon-close {
   fill: #89c9f3;
 }
 
@@ -842,7 +904,9 @@ body {
 }
 
 .download-free:hover,
-.download-not-free:hover {
+.download-not-free:hover,
+.download-free:focus,
+.download-not-free:focus {
   background: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
   border: none;
 }
@@ -962,7 +1026,8 @@ body {
   padding: 12px 60px;
 }
 
-.modal-download-btn:hover {
+.modal-download-btn:hover,
+.modal-download-btn:focus {
   background: #06071b;
   border: 2px solid;
   border-radius: 6px;
